Fixed #7, reimplement the source code

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,31 @@
+# Hugging Face mirror endpoint
+# Mirror address for accelerating model downloads
 HF_ENDPOINT=https://hf-mirror.com
 
+# Whether to reuse the current database
+# When set to true, will reuse existing database connection
+# When set to false, will start 
+REUSE_CURRENT_DB=true
+
+
+# Use what kind of docker, seekdb's docker or oceanbase-ce's docker
+# Options: seekdb, oceanbase
+# seekdb: If REUSE_CURRENT_DB is false, download seekdb docker
+# oceanbase: If REUSE_CURRENT_DB is false, download oceanbase-ce docker
+DB_STORE=seekdb
+
+# Database Setting, please change as your environment. 
 DB_HOST="127.0.0.1"
 DB_PORT="2881"
-DB_USER="root@test"
+DB_USER="root"
+# If database use OceanBase, the DB_USER will contain tenant's name
+# DB_USER="root@test"
+DB_PASSWORD="TTest44ob"
 DB_NAME="test"
-DB_PASSWORD=""
 
+
+# UI language
+# Display language for the application interface, options: zh (Chinese), en (English)
 UI_LANG="zh"
+
+
