--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "oceanbase", email = "open_oceanbase@oceanbase.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.9,<4.0"
+requires-python = ">=3.10,<4.0"
 dependencies = [
     "towhee>=1.1.3,<2.0.0",
     "streamlit>=1.39.0,<2.0.0",
@@ -17,12 +17,18 @@ dependencies = [
     "pyobvector>=0.1.6,<1.0.0",
     "fastapi-cdn-host>=0.9.1,<1.0.0",
     "fastapi>=0.115.12,<1.0.0",
+    "uvicorn[standard]>=0.30.0,<1.0.0",
 ]
 
 [tool.setuptools.packages.find]
-where = ["backend"]
-include = ["image_search*"]
+where = ["src"]
 
 [build-system]
 requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.basedpyright]
+pythonVersion = "3.10"
+typeCheckingMode = "basic"
+reportMissingImports = false
+reportMissingModuleSource = false
