Fixed #7, fix docker install

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ HF_ENDPOINT=https://hf-mirror.com
 
 # Whether to reuse the current database
 # When set to true, will reuse existing database connection
-# When set to false, will start 
-REUSE_CURRENT_DB=true
+# When set to false, will start download dockers, at this time, DB_USER must be root
+REUSE_CURRENT_DB=false
 
 
 # Use what kind of docker, seekdb's docker or oceanbase-ce's docker
@@ -17,10 +17,11 @@ DB_STORE=seekdb
 # Database Setting, please change as your environment. 
 DB_HOST="127.0.0.1"
 DB_PORT="2881"
+# if REUSE_CURRENT_DB is false, DB_USER must be root
 DB_USER="root"
 # If database use OceanBase, the DB_USER will contain tenant's name
 # DB_USER="root@test"
-DB_PASSWORD="TTest44ob"
+DB_PASSWORD="Testob1234"
 DB_NAME="test"
 
 
