Fixed #7, update README.md

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,9 @@ HF_ENDPOINT=https://hf-mirror.com
 
 # Whether to reuse the current database
 # When set to true, will reuse existing database connection
-# When set to false, will start download dockers, at this time, DB_USER must be root
+# When set to false, will start download dockers, at this time:
+#                   if DB_STORE is seekdb, DB_USER must be root
+#                   if DB_STORE is oceanbase, DB_USER must be root@test
 REUSE_CURRENT_DB=false
 
 
@@ -17,7 +19,8 @@ DB_STORE=seekdb
 # Database Setting, please change as your environment. 
 DB_HOST="127.0.0.1"
 DB_PORT="2881"
-# if REUSE_CURRENT_DB is false, DB_USER must be root
+#if REUSE_CURRENT_DB=false and DB_STORE=seekdb, DB_USER must be root
+#if REUSE_CURRENT_DB=false and DB_STORE=oceanbase, DB_USER must be root@test
 DB_USER="root"
 # If database use OceanBase, the DB_USER will contain tenant's name
 # DB_USER="root@test"
