feat: add hybrid search

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,11 @@ DB_NAME="test"
 
 
 # UI language
-# Display language for the application interface, options: zh (Chinese), en (English)
+# Display language for the application interface, options: zh (Chinese), en (English), ja (Japanese)
 UI_LANG="zh"
 
+# OpenAI-compatible image captioning API (Qwen/OpenAI/Azure etc)
+API_KEY=
+BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+MODEL=qwen-vl-max
 
