--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ dependencies = [
     "fastapi-cdn-host>=0.9.1,<1.0.0",
     "fastapi>=0.115.12,<1.0.0",
     "uvicorn[standard]>=0.30.0,<1.0.0",
+    "openai>=1.54.3,<2.0.0",
+    "httpx>=0.27.2,<0.28.0",
 ]
 
 [tool.setuptools.packages.find]
