--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,7 @@ DB_NAME="test"
 
 # UI language
 # Display language for the application interface, options: zh (Chinese), en (English), ja (Japanese)
-UI_LANG="ja"
+UI_LANG="en"
 
 # OpenAI-compatible image captioning API (Qwen/OpenAI/Azure etc)
 API_KEY=
