--- a/.env.example
+++ b/.env.example
@@ -24,7 +24,7 @@ DB_PORT="2881"
 DB_USER="root"
 # If database use OceanBase, the DB_USER will contain tenant's name
 # DB_USER="root@test"
-DB_PASSWORD="Testob1234"
+DB_PASSWORD="oblab"
 DB_NAME="test"
 
 
