--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,3 @@
-# Hugging Face mirror endpoint
-# Mirror address for accelerating model downloads
-HF_ENDPOINT=https://hf-mirror.com
-
 # Whether to reuse the current database
 # When set to true, will reuse existing database connection
 # When set to false, will start download dockers, at this time:
@@ -33,7 +29,16 @@ DB_NAME="test"
 UI_LANG="en"
 
 # OpenAI-compatible image captioning API (Qwen/OpenAI/Azure etc)
-API_KEY=
+LLM_API_KEY=
 BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 MODEL=qwen-vl-max
+
+# Image embedding API settings
+# EMBEDDING_TYPE: Embedding backend type
+#   - dashscope: DashScope Multimodal-Embedding API (default)
+# EMBEDDING_API_KEY: API key for embedding service
+EMBEDDING_API_KEY=
+EMBEDDING_TYPE=dashscope
+EMBEDDING_MODEL=tongyi-embedding-vision-plus
+EMBEDDING_DIMENSION=1024
 
