--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,6 @@ tmp/**
 *.db
 !.gitkeep
 .DS_Store
-uv.lock
 data/tmp/**
 
 # uv related files and directories
@@ -40,3 +39,8 @@ coverage.xml
 *.swp
 *.swo
 *~
+
+# docker volumes
+docker/volumes/seekdb/
+docker/volumes/oceanbase/
+docker/volumes/image-data/
