--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,12 +8,9 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
-    "towhee>=1.1.3,<2.0.0",
+    "dashscope>=1.20.0,<2.0.0",
     "streamlit>=1.39.0,<2.0.0",
     "python-dotenv>=1.0.1,<2.0.0",
-    "opencv-python>=4.10.0.84,<5.0.0",
-    "torchvision>=0.20.0,<1.0.0",
-    "transformers>=4.45.2,<5.0.0",
     "pyobvector>=0.1.6,<1.0.0",
     "fastapi-cdn-host>=0.9.1,<1.0.0",
     "fastapi>=0.115.12,<1.0.0",
