--- a/.env.example
+++ b/.env.example
@@ -29,8 +29,8 @@ DB_NAME="test"
 UI_LANG="en"
 
 # OpenAI-compatible image captioning API (Qwen/OpenAI/Azure etc)
-LLM_API_KEY=
-BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
+VLM_API_KEY=
+VLM_BASE_URL=https://dashscope.aliyuncs.com/compatible-mode/v1
 MODEL=qwen-vl-max
 
 # Image embedding API settings
